fix #38 putting back extra-spacing class in style.scss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,6 +73,9 @@ h2{
   }
 }
 
+.extra-spacing{
+  margin-top: 3rem;
+}
 .height-100{
   height: 100%;
 }
